kube/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: manifest-ingress
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: manifest-service
          servicePort: 80
